# ruranges

./: .gitignore  Cargo.toml  pyproject.toml
scripts/: test.py  test_cluster.py  test_subsequence.py  test_subtract.py
src/: boundary.rs  cluster.rs  complement.rs  complement_single.rs  lib.rs  main.rs  merge.rs  nearest.rs  nearest_unique_k.rs  numpy_bindings.rs  overlaps.rs  overlaps_two_pointer.rs  ruranges_structs.rs  sorts.rs  spliced_subsequence.rs  subtract.rs
tests/: random_test_ruranges.py  test_nearest.py
