[package]
name = "ruranges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ruranges"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
radsort = "0.1.1"
rustc-hash = "2.1.0"
numpy = "0.23"
natord = "1.0"
rayon = "1.8"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
