[package]
name = "ruranges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ruranges"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
radsort = "0.1.1"
rustc-hash = "2.1.0"
numpy = "0.23"
indexmap = "1.9"
polars = { version = "0.46.0", features = ["csv"] }
clap = { version = "4.5.29", features = ["derive"] }


# [profile.release]
# lto = true
# opt-level = 3
# codegen-units = 1
